--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "konva": "^9.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15"
+    "react-konva": "^18.2.10"
   },
   "scripts": {
     "start": "react-scripts start",
